# ma1-stonefish

./: README.md
ma1_joystick_interface/: CMakeLists.txt  package.xml
ma1_joystick_interface/config/: config.yaml
ma1_joystick_interface/launch/: ma1_joystick_interface.launch.py
ma1_joystick_interface/ma1_joystick_interface/: ma1_joystick_interface_node.py
ma1_qp/: CMakeLists.txt  package.xml
ma1_qp/include/ma1_qp/: thrust_allocator.hpp  thrust_allocator_node.hpp
ma1_qp/launch/: ma1_qp.launch.py
ma1_qp/src/: thrust_allocator.cpp  thrust_allocator_node.cpp
ma1_sim/: ma1_sim_interface.cpp  thrust_allocation_node.py
ma1_sim/launch/: ma1.launch.py  simulation.launch.py
ma1_sim/metadata/: looks.scn
ma1_sim/scenarios/: demo.scn  ma1.scn
ma1_thrust_allocation/: CMakeLists.txt  package.xml
ma1_thrust_allocation/launch/: ma1_thrust_allocation.launch.py
ma1_thrust_allocation/ma1_thrust_allocation/: ma1_actuators.py  ma1_thrust_allocation_node.py
notebooks/: reference_filter_thrust_alloc.ipynb  thruster_analysis.ipynb
notebooks/data/: exp2a.csv
